objects/MWA1_Survey__c.object
<CustomObject>
    <description>Used to store the macro survey information</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Body_Text__c</fullName>
        <label>Invite Body Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Label__c</fullName>
        <label>Email Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Contact_Not_Found__c</fullName>
        <label>If Contact Not Found</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Do not add</fullName>
                    <default>true</default>
                    <label>Do not add</label>
                </value>
                <value>
                    <fullName>Add as Lead</fullName>
                </value>
                <value>
                    <fullName>Add as Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prevent_Multiple_Submissions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prevent Multiple Submissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_URL__c</fullName>
        <label>Return URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sending_Email_Address__c</fullName>
        <label>Sending Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Cut_Off__c</fullName>
        <label>Survey Cut-Off</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <label>Survey Invitation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <label>Survey Theme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Theme A</fullName>
                </value>
                <value>
                    <fullName>Theme B</fullName>
                </value>
                <value>
                    <fullName>Theme C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee Survey</fullName>
                </value>
                <value>
                    <fullName>Performance Review</fullName>
                </value>
                <value>
                    <fullName>Product Survey</fullName>
                </value>
                <value>
                    <fullName>Satisfaction Survey</fullName>
                </value>
                <value>
                    <fullName>Test/Quiz</fullName>
                </value>
                <value>
                    <fullName>Training Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>